--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -20,9 +20,13 @@
   --color-secondary: var(--secondary);
   --color-secondary-foreground: var(--secondary-foreground);
   --color-blue: var(--blue);
-  --color-red: var(--red);
   --color-blue-foreground: var(--blue-foreground);
+  --color-red: var(--red);
   --color-red-foreground: var(--red-foreground);
+  --color-purple: var(--purple);
+  --color-purple-foreground: var(--purple-foreground);
+  --color-green: var(--green);
+  --color-green-foreground: var(--green-foreground);
   --color-muted: var(--muted);
   --color-muted-foreground: var(--muted-foreground);
   --color-accent: var(--accent);
@@ -59,9 +63,13 @@
   --secondary: oklch(0.97 0 0);
   --secondary-foreground: oklch(0.205 0 0);
   --blue: oklch(0.53 0.2635 264.59);
-  --red: oklch(0.63 0.2569 29.23);
   --blue-foreground: oklch(0.985 0 0);
+  --red: oklch(0.63 0.2569 29.23);
   --red-foreground: oklch(0.985 0 0);
+  --purple: oklch(0.68 0.1756 294.04);
+  --purple-foreground: oklch(0.985 0 0);
+  --green: oklch(0.62 0.153 153.16);
+  --green-foreground: oklch(0.985 0 0);
   --muted: oklch(0.97 0 0);
   --muted-foreground: oklch(0.556 0 0);
   --accent: oklch(0.97 0 0);
@@ -97,9 +105,13 @@
   --secondary: oklch(0.269 0 0);
   --secondary-foreground: oklch(0.985 0 0);
   --blue: oklch(0.53 0.2635 264.59);
-  --red: oklch(0.63 0.2569 29.23);
   --blue-foreground: oklch(0.985 0 0);
+  --red: oklch(0.63 0.2569 29.23);
   --red-foreground: oklch(0.985 0 0);
+  --purple: oklch(0.68 0.1756 294.04);
+  --purple-foreground: oklch(0.985 0 0);
+  --green: oklch(0.62 0.153 153.16);
+  --green-foreground: oklch(0.985 0 0);
   --muted: oklch(0.269 0 0);
   --muted-foreground: oklch(0.708 0 0);
   --accent: oklch(0.269 0 0);
